<resources>
    <string name="app_name">BlackJack</string>
    <string name="user">User:</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password:</string>
    <string name="digite_o_usu_rio">Digite o usuário</string>
    <string name="register_user">Register User</string>
    <string name="digite_a_senha">Digite a senha</string>
    <string name="e_mail">E-mail:</string>
    <string name="digite_o_e_mail">Digite o e-mail</string>
    <string name="digite_o_nome_do_usu_rio">Digite o nome do usuário</string>
    <string name="configuracoes" />
    <string name="procurar" />
    <string name="logoff">logoff</string>
    <string name="usuario_senha_invalidos">Usuario e/ou senha inválidos</string>
    <string name="title_activity_game1">BackJack</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
    <string name="winUser">Voce fez Black Jack</string>
    <string name="voceEstourou">Voce perdeu, estourou</string>
    <string name="empatePCUserEstouraram">Empate, voce e a mesa estouraram</string>
    <string name="pcWin">O computador ganhou</string>
    <string name="empate">Empate</string>
    <string name="userBlackJack">Voce fez BlackJack</string>
</resources>
