<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputGoogle"
        android:layout_width="223dp"
        android:layout_height="56dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toEndOf="@+id/labelPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginNameUser"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/labelPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelUser"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="77dp"
        android:onClick="actionButtonLogin"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputGoogle" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="77dp"
        android:onClick="actionScreenRegisterUser"
        android:text="@string/register"
        app:layout_constraintStart_toEndOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/inputGoogle"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/labelUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="44dp"
        android:text="@string/user"
        app:layout_constraintEnd_toStartOf="@+id/txtLoginNameUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtLoginNameUser"
        android:layout_width="222dp"
        android:layout_height="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/digite_o_usu_rio"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/labelUser"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>